# HttpServer

./: CMakeLists.txt  Dockerfile  docker-compose.yml
pages/: internal-server-error-500.html  resourse-not-found-404.html
src/: Detail.cpp  Detail.h  HttpServer.cpp  HttpServer.h  NetDetail.cpp  NetDetail.h  Request.cpp  Request.h  RequestType.cpp  RequestType.h  Response.cpp  Response.h  ResponseStatusCode.cpp  ResponseStatusCode.h  Server.cpp  Server.h  da.cpp  main.cpp
